# BurpSuite-HAR-Exporter

./: bi2har.py  bpitemsToHar.py  pyproject.toml  readme-cn.md  readme.md  setup.py
bpi2har/: cli.py  functions.py  harlog.py
